Closed
Bug 372483
Opened 18 years ago
Closed 18 years ago
"ASSERTION: expected a frame" with <math:munder>
Categories
(Core :: MathML, defect)
Core
MathML
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(3 files)
133 bytes,
application/xhtml+xml
|
Details | |
8.13 KB,
text/plain
|
Details | |
2.64 KB,
patch
|
rbs
:
review+
rbs
:
superreview+
|
Details | Diff | Splinter Review |
A <math:munder> by itself triggers:
###!!! ASSERTION: expected a frame: 'aFirst', file /Users/jruderman/trunk/mozilla/layout/mathml/base/src/nsMathMLContainerFrame.cpp, line 1420
I think this is a recent regression.
Reporter | ||
Comment 1•18 years ago
|
||
Assignee | ||
Comment 2•18 years ago
|
||
mea culpa
Assignee | ||
Comment 3•18 years ago
|
||
Assignee | ||
Comment 4•18 years ago
|
||
There are a couple of call sites where aFirst could be null, we could
add null checks at those places but I think making DidReflowChildren()
deal with a null frame is less error prone.
Attachment #257222 -
Flags: superreview?(rbs)
Attachment #257222 -
Flags: review?(rbs)
Comment on attachment 257222 [details] [diff] [review]
Patch rev. 1
Agree. r+sr=rbs
Attachment #257222 -
Flags: superreview?(rbs)
Attachment #257222 -
Flags: superreview+
Attachment #257222 -
Flags: review?(rbs)
Attachment #257222 -
Flags: review+
Assignee | ||
Comment 6•18 years ago
|
||
Checked in to trunk at 2007-03-04 08:13 PST.
-> FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•