Make DidReflowChildren() deal with a null first frame. b=372483 r+sr=rbs