layout/mathml/base/src/nsMathMLContainerFrame.h
@@ -311,6 +311,7 @@ protected:
    * Call DidReflow() if the NS_FRAME_IN_REFLOW frame bit is set on aFirst and
    * all its next siblings up to, but not including, aStop.
    * aStop == nsnull meaning all next siblings with the bit set.
+   * The method does nothing if aFirst == nsnull.
    */
   void DidReflowChildren(nsIFrame* aFirst, nsIFrame* aStop = nsnull);
 };
